force-app/main/default/objects/Volunteer_Staffing_Matrix__mdt/Volunteer_Staffing_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Volunteer Staffing Matrix</label>
    <pluralLabel>Volunteer Staffing Matrix</pluralLabel>
</CustomObject>