force-app/main/default/objects/Volunteer_Staffing_Matrix__mdt/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <description>Created as part of HRP-15041</description>
    <label>Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Site</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>