force-app/main/default/objects/Volunteer_Staffing_Matrix__mdt/fields/High_School_Drive__c.field-meta.xml
<CustomField>
    <fullName>High_School_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High School Drive</label>
    <type>Checkbox</type>
</CustomField>