force-app/main/default/objects/Volunteer_Staffing_Matrix__mdt/fields/Min_Anticipated_Registered_Donors__c.field-meta.xml
<CustomField>
    <fullName>Min_Anticipated_Registered_Donors__c</fullName>
    <label>Min Anticipated Registered Donors</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>