force-app/main/default/objects/Volunteer_Staffing_Matrix__mdt/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <description>Created as part of HRP-15041</description>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Non Integrated WB</fullName>
            </value>
            <value>
                <fullName>Non Integrated APH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>