force-app/main/default/objects/Volunteer_Staffing_Matrix__mdt/fields/Volunteer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Quantity__c</fullName>
    <label>Volunteer Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>