force-app/main/default/objects/Volunteer_Staffing_Matrix__mdt/listViews/All_New.listView-meta.xml
<ListView>
    <fullName>All_New</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Volunteer_Quantity__c</columns>
    <columns>Max_Anticipated_Registered_Donors__c</columns>
    <columns>Min_Anticipated_Registered_Donors__c</columns>
    <columns>High_School_Drive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All New</label>
    <language>en_US</language>
</ListView>