force-app/main/default/objects/Volunteer_Staffing_Matrix__mdt/listViews/Donor_Ambassador_Volunteer_Matrix.listView-meta.xml
<ListView>
    <fullName>Donor_Ambassador_Volunteer_Matrix</fullName>
    <columns>MasterLabel</columns>
    <columns>High_School_Drive__c</columns>
    <columns>Min_Anticipated_Registered_Donors__c</columns>
    <columns>Max_Anticipated_Registered_Donors__c</columns>
    <columns>Volunteer_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Donor Ambassador Volunteer Matrix</label>
    <language>en_US</language>
</ListView>